syntax = "proto3";

package aperture.distcache.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

//
// gRPC service
//

// DistCacheService is used to query DistCache.
service DistCacheService {
  rpc GetStats(google.protobuf.Empty) returns (Stats) {
    option (google.api.http) = {
      get: "/v1/distcache/stats"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags: [
        "aperture-agent"
      ];
    };
  }
}

message DMap {
  int64 length = 1 [json_name = "Length"];
  SlabInfo slab_info = 2 [json_name = "SlabInfo"];
  int64 num_tables = 3 [json_name = "NumTables"];
}

message DMaps {
  int64 entries_total = 1 [json_name = "EntriesTotal"];
  int64 delete_hits = 2 [json_name = "DeleteHits"];
  int64 delete_misses = 3 [json_name = "DeleteMisses"];
  int64 get_misses = 4 [json_name = "GetMisses"];
  int64 get_hits = 5 [json_name = "GetHits"];
  int64 evicted_total = 6 [json_name = "EvictedTotal"];
}

message DTopics {
  int64 published_total = 1 [json_name = "PublishedTotal"];
  int64 current_listeners = 2 [json_name = "CurrentListeners"];
  int64 listeners_total = 3 [json_name = "ListenersTotal"];
}

message MemStats {
  message BySize {
    uint32 size = 1 [json_name = "Size"];
    uint64 mallocs = 2 [json_name = "Mallocs"];
    uint64 frees = 3 [json_name = "Frees"];
  }

  uint64 alloc = 1 [json_name = "Alloc"];
  uint64 total_alloc = 2 [json_name = "TotalAlloc"];
  uint64 sys = 3 [json_name = "Sys"];
  uint64 lookups = 4 [json_name = "Lookups"];
  uint64 mallocs = 5 [json_name = "Mallocs"];
  uint64 frees = 6 [json_name = "Frees"];
  uint64 heap_alloc = 7 [json_name = "HeapAlloc"];
  uint64 heap_sys = 8 [json_name = "HeapSys"];
  uint64 heap_idle = 9 [json_name = "HeapIdle"];
  uint64 heap_inuse = 10 [json_name = "HeapInuse"];
  uint64 heap_released = 11 [json_name = "HeapReleased"];
  uint64 heap_objects = 12 [json_name = "HeapObjects"];
  uint64 stack_inuse = 13 [json_name = "StackInuse"];
  uint64 stack_sys = 14 [json_name = "StackSys"];
  uint64 m_span_inuse = 15 [json_name = "MSpanInuse"];
  uint64 m_span_sys = 16 [json_name = "MSpanSys"];
  uint64 m_cache_inuse = 17 [json_name = "MCacheInuse"];
  uint64 m_cache_sys = 18 [json_name = "MCacheInuse"];
  uint64 buck_hash_sys = 19 [json_name = "BuckHashSys"];
  uint64 gc_sys = 20 [json_name = "GCSys"];
  uint64 other_sys = 21 [json_name = "OtherSys"];
  uint64 next_gc = 22 [json_name = "NextGC"];
  uint64 last_gc = 23 [json_name = "LastGC"];
  uint64 pause_total_ns = 24 [json_name = "PauseTotalNs"];
  uint64 pause_ns = 25 [json_name = "PauseNs"];
  uint64 pause_end = 26 [json_name = "PauseEnd"];
  uint32 num_gc = 27 [json_name = "NumGC"];
  uint32 num_forced_gc = 28 [json_name = "NumForcedGC"];
  double gc_cpu_fraction = 29 [json_name = "GCCPUFraction"];
  bool enable_gc = 30 [json_name = "EnableGC"];
  bool debug_gc = 31 [json_name = "DebugGC"];
  BySize by_size = 32 [json_name = "BySize"];
}

message Member {
  string name = 1 [json_name = "Name"];
  uint64 id = 2 [json_name = "ID"];
  int64 birthdate = 3 [json_name = "Birthdate"];
}

message Network {
  int64 connections_total = 1 [json_name = "ConnectionsTotal"];
  int64 current_connections = 2 [json_name = "CurrentConnections"];
  int64 written_bytes_total = 3 [json_name = "WrittenBytesTotal"];
  int64 read_bytes_total = 4 [json_name = "ReadBytesTotal"];
  int64 commands_total = 5 [json_name = "CommandsTotal"];
}

message Partition {
  repeated Member previous_owners = 1 [json_name = "PreviousOwners"];
  repeated Member backups = 2 [json_name = "Backups"];
  int64 length = 3 [json_name = "Length"];
  map<string, DMap> d_maps = 4 [json_name = "DMaps"];
}

message Runtime {
  string go_os = 1 [json_name = "GOOS"];
  string go_arch = 2 [json_name = "GOARCH"];
  string version = 3 [json_name = "Version"];
  int64 num_cpu = 4 [json_name = "Allocated"];
  int64 num_goroutine = 5 [json_name = "NumCPU"];
  MemStats mem_stats = 6 [json_name = "NumGoroutine"];
}

message SlabInfo {
  int64 allocated = 1 [json_name = "Allocated"];
  int64 inuse = 2 [json_name = "Inuse"];
  int64 garbage = 3 [json_name = "Garbage"];
}

message Stats {
  repeated string cmdline = 1 [json_name = "Cmdline"];
  string release_version = 2 [json_name = "ReleaseVersion"];
  int64 uptime_seconds = 3 [json_name = "UptimeSeconds"];
  Runtime runtime = 4 [json_name = "Runtime"];
  Member cluster_coordinator = 5 [json_name = "ClusterCoordinator"];
  Member member = 6 [json_name = "Member"];
  map<uint64, Partition> partitions = 7 [json_name = "Partitions"];
  map<uint64, Partition> backups = 8 [json_name = "Backups"];
  map<uint64, Member> cluster_members = 9 [json_name = "ClusterMembers"];
  Network network = 10 [json_name = "Network"];
  DMaps d_maps = 11 [json_name = "DMaps"];
  DTopics d_topics = 12 [json_name = "DTopics"];
}
